tests/errors/kind_var_of_int.f90
program kind_var_of_int
    implicit none
    integer :: a = 4
    real(a) :: x
end program
